bug fix: preventing scrolling of body when user tries to scroll page in Drawer, also disabled border on focused links on mobile

--- a/src/container/DrawerNavContainer.scss
+++ b/src/container/DrawerNavContainer.scss
@@ -72,7 +72,7 @@ $breakPoint: 800px;
             font-size: 5vh;
           }
 
-          &:hover {
+          &:hover, &:focus {
             border-left: 2px solid transparent;
           }
         }
